2012-02-17  Kaz Kylheku  <kaz@kylheku.com>

	Reimplementation of how TXR decides whether to dump bindings
	or not. This is now done right inside the standard output stream.

	* match.c (output_produced): Variable removed.
	(complex_open): Assignment to output_produced removed.

	* stream.c (output_produced): New global variable.
	(stdio_put_string, stdio_put_char): Set output_produced
	to t if the target of the output is stdout.

	* stream.h (output_produced): Declared.

	* txr.h (output_produced): Declaration removed.

2012-02-17  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (dwim_loc): 2012-02-13 fix didn't do it. 
	Here is a simpler way. We can let nil be treated as a list with a
	simple goto. This solves all cases.

2012-02-16  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (eval_init): Register match-fun.

	* match.c (v_do): Store match context.
	(match_fun): New function.

	* match.h (match_fun): Declared.

	* stream.c (streamp): New function.

	* stream.h (streamp): Declared.

	* txr.1: Stub section for match-fun.

	* txr.vim: Highlight match-fun.

2012-02-16  Kaz Kylheku  <kaz@kylheku.com>

	* match.c (match_funcall): Function renamed to match_filter.

	* match.h (match_funcall): Declaration updated.

	* filter.c (get_filter): Updated.

2012-02-16  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (op_catch): Treat the nil exception object as an empty
	list, and not the atom nil.

	* match.c (v_try): Do not transform an atomic exception x into
	the list ((t . x)). Just to (x). This (t . x) representation is
	a vestige of from the time when the exception consisted of the
	old-style return values from txeval.

2012-02-16  Kaz Kylheku  <kaz@kylheku.com>

	TXR Lisp gets exception handling.

	* eval.c (op_catch, expand_catch_clause,
	expand_catch): New static functions.
	(expand): Handle catch operator.
	(eval_init): Added catch operator to op_table,
	and registered new functions throw, throwf and error.

	* txr.1: Documented catch operator and created